--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1882,6 +1882,7 @@ _instanceCharts:
 _timelines:
   home: "Home"
   local: "Local"
+  media: "Media"
   social: "Social"
   global: "Global"
 _play:
