個人宛てのお知らせの表示を改善

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1065,6 +1065,7 @@ installed: "インストール済み"
 branding: "ブランディング"
 newUserAnnouncementAvailable: "新着のあなた宛てのお知らせがあります"
 viewAnnouncement: "お知らせを見る"
+dialogCloseDuration: "ダイアログを閉じるまでの待機時間"
 
 _initialAccountSetting:
   accountCreated: "アカウントの作成が完了しました！"
