--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -251,6 +251,7 @@ noSuchUser: "ユーザーが見つかりません"
 lookup: "照会"
 announcements: "お知らせ"
 imageUrl: "画像URL"
+displayOrder: "表示順"
 remove: "削除"
 removed: "削除しました"
 removeAreYouSure: "「{x}」を削除しますか？"
