feat: ロールによるコンテンツの操作の制限

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1404,6 +1404,9 @@ _role:
     gtlAvailable: "Can view the global timeline"
     ltlAvailable: "Can view the local timeline"
     canPublicNote: "Can send public notes"
+    canCreateContent: "Can create contents"
+    canUpdateContent: "Can edit contents"
+    canDeleteContent: "Can delete contents"
     canInvite: "Can create instance invite codes"
     inviteLimit: "Invite limit"
     inviteLimitCycle: "Invite limit cooldown"
