--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1412,6 +1412,9 @@ _role:
     gtlAvailable: "グローバルタイムラインの閲覧"
     ltlAvailable: "ローカルタイムラインの閲覧"
     canPublicNote: "パブリック投稿の許可"
+    canCreateContent: "コンテンツの作成"
+    canUpdateContent: "コンテンツの編集"
+    canDeleteContent: "コンテンツの削除"
     canInvite: "サーバー招待コードの発行"
     inviteLimit: "招待コードの作成可能数"
     inviteLimitCycle: "招待コードの発行間隔"
