--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1686,7 +1686,9 @@ _2fa:
   step2Url: "You can also enter this URL if you're using a desktop program:"
   step3Title: "Enter an authentication code"
   step3: "Enter the token provided by your app to finish setup."
-  step4: "From now on, any future login attempts will ask for such a login token."
+  step4: "From now on, any future login attempts will ask for such a login token.\n\nWe've generated backup codes for emergency access to your account in case your authentication app becomes unavailable.\nPlease ensure these are stored in a safe place to prevent loss.\nEach of these codes can only be used once.\nIf you exhaust all the codes, you will not be able to access your account anymore, so please reconfigure your authentication app as soon as possible.\n\nBackup Codes:\n\n{codes}"
+  twoFactorBackupSecretWarning: "You have used some of your backup codes. If your authentication app is no longer available, please reconfigure your authentication app as soon as possible."
+  twoFactorBackupSecretExhausted: "You have exhausted all your backup codes. If your authentication app is no longer available, you will not be able to access your account anymore. please reconfigure your authentication app as soon as possible."
   securityKeyNotSupported: "Your browser does not support security keys."
   registerTOTPBeforeKey: "Please set up an authenticator app to register a security or pass key."
   securityKeyInfo: "Besides fingerprint or PIN authentication, you can also setup authentication via hardware security keys that support FIDO2 to further secure your account."
@@ -1698,7 +1700,7 @@ _2fa:
   removeKeyConfirm: "Really delete the {name} key?"
   whyTOTPOnlyRenew: "The authenticator app cannot be removed as long as a security key is registered."
   renewTOTP: "Reconfigure authenticator app"
-  renewTOTPConfirm: "This will cause verification codes from your previous app to stop working"
+  renewTOTPConfirm: "This will cause verification codes from your previous app and backup codes to stop working"
   renewTOTPOk: "Reconfigure"
   renewTOTPCancel: "Cancel"
 _permissions:
