--- a/locales/ja-KS.yml
+++ b/locales/ja-KS.yml
@@ -1682,7 +1682,7 @@ _2fa:
   step2Url: "デスクトップアプリやったら次のURLを入力してや:"
   step3Title: "確認コードを入れてーや"
   step3: "アプリに表示されているトークンを入力して終わりや。"
-  step4: "これからログインするときも、同じようにトークンを入力するんやで"
+  step4: "これからログインするときも、同じようにトークンを入力するんやで\n\n認証アプリが使えなくなった時、アカウントへの緊急アクセスのためのバックアップコードを作成しました。\n紛失防止のため、必ず安全な場所に保管してください。\nこれらのコードはそれぞれ1回だけ使用することができます。\nもし全てのコードを使い切ってしまうとアカウントにアクセスすることができなくなってしまうので、出来るだけ早く認証アプリを再設定してください。\n\nバックアップコード:\n\n{codes}"
   securityKeyNotSupported: "今使とるブラウザはセキュリティキーに対応してへんのやってさ。"
   registerTOTPBeforeKey: "セキュリティキー・パスキーを登録するんやったら、まず認証アプリを設定してーな。"
   securityKeyInfo: "FIDO2をサポートするハードウェアセキュリティキーか端末の指紋認証やPINを使ってログインするように設定できるで。"
@@ -1694,7 +1694,7 @@ _2fa:
   removeKeyConfirm: "{name}を消すん？"
   whyTOTPOnlyRenew: "セキュリティキーが登録されとったら、認証アプリの設定は解除できへんで。"
   renewTOTP: "認証アプリをもっかい設定"
-  renewTOTPConfirm: "今までの人称アプリの確認コードは使えんくなるけどええか？"
+  renewTOTPConfirm: "今までの人称アプリの確認コードとバックアップコードは使えんくなるけどええか？"
   renewTOTPOk: "もっかい設定する"
   renewTOTPCancel: "やめとく"
 _permissions:
