--- a/locales/de-DE.yml
+++ b/locales/de-DE.yml
@@ -1682,7 +1682,7 @@ _2fa:
   step2Url: "Nutzt du ein Desktopprogramm kannst du alternativ diese URL eingeben:"
   step3Title: "Authentifizierungsscode eingeben"
   step3: "Gib zum Abschluss den Token ein, der von deiner App angezeigt wird."
-  step4: "Alle folgenden Anmeldeversuche werden ab sofort die Eingabe eines solchen Tokens benötigen."
+  step4: "Alle folgenden Anmeldeversuche werden ab sofort die Eingabe eines solchen Tokens benötigen.\n\nWe've generated backup codes for emergency access to your account in case your authentication app becomes unavailable.\nPlease ensure these are stored in a safe place to prevent loss.\nEach of these codes can only be used once.\nIf you exhaust all the codes, you will not be able to access your account anymore, so please reconfigure your authentication app as soon as possible.\n\nBackup Codes:\n\n{codes}"
   securityKeyNotSupported: "Dein Browser unterstützt keine Security-Tokens."
   registerTOTPBeforeKey: "Um einen Security-Token oder einen Passkey zu registrieren, musst du zuerst eine Authentifizierungs-App registrieren."
   securityKeyInfo: "Du kannst neben Fingerabdruck- oder PIN-Authentifizierung auf deinem Gerät auch Anmeldung mit Hilfe eines FIDO2-kompatiblen Hardware-Sicherheitsschlüssels einrichten."
