--- a/locales/fr-FR.yml
+++ b/locales/fr-FR.yml
@@ -1251,7 +1251,7 @@ _2fa:
   step2: "Ensuite, scannez le code QR affiché sur l’écran."
   step2Url: "Vous pouvez également saisir cette URL si vous utilisez un programme de bureau :"
   step3: "Entrez le jeton affiché sur votre application pour compléter la configuration."
-  step4: "À partir de maintenant, ce même jeton vous sera demandé à chacune de vos connexions."
+  step4: "À partir de maintenant, ce même jeton vous sera demandé à chacune de vos connexions.\n\nWe've generated backup codes for emergency access to your account in case your authentication app becomes unavailable.\nPlease ensure these are stored in a safe place to prevent loss.\nEach of these codes can only be used once.\nIf you exhaust all the codes, you will not be able to access your account anymore, so please reconfigure your authentication app as soon as possible.\n\nBackup Codes:\n\n{codes}"
   securityKeyInfo: "Vous pouvez configurer l'authentification WebAuthN pour sécuriser davantage le processus de connexion grâce à une clé de sécurité matérielle qui prend en charge FIDO2, ou bien en configurant l'authentification par empreinte digitale ou par code PIN sur votre appareil."
   removeKeyConfirm: "Voulez-vous supprimer {name} ?"
   renewTOTPCancel: "Pas maintenant"
