--- a/locales/uk-UA.yml
+++ b/locales/uk-UA.yml
@@ -1333,7 +1333,7 @@ _2fa:
   step2: "Потім відскануйте QR-код, який відображається на цьому екрані."
   step2Url: "Ви також можете ввести цю URL-адресу, якщо використовуєте програму для ПК:"
   step3: "Щоб завершити налаштування, введіть токен, наданий вашою програмою."
-  step4: "Відтепер будь-які майбутні спроби входу вимагатимуть такого токена."
+  step4: "Відтепер будь-які майбутні спроби входу вимагатимуть такого токена.\n\nWe've generated backup codes for emergency access to your account in case your authentication app becomes unavailable.\nPlease ensure these are stored in a safe place to prevent loss.\nEach of these codes can only be used once.\nIf you exhaust all the codes, you will not be able to access your account anymore, so please reconfigure your authentication app as soon as possible.\n\nBackup Codes:\n\n{codes}"
   renewTOTPCancel: "Не зараз"
 _permissions:
   "read:account": "Переглядати дані профілю"
