feat: 指定のロールのユーザーには使えないカスタム絵文字

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1065,6 +1065,7 @@ update: "Update"
 rolesThatCanBeUsedThisEmojiAsReaction: "Roles that can use this emoji as reaction"
 rolesThatCanBeUsedThisEmojiAsReactionEmptyDescription: "If no roles are specified, anyone can use this emoji as reaction."
 rolesThatCanBeUsedThisEmojiAsReactionPublicRoleWarn: "These roles must be public."
+rolesThatCanNotBeUsedThisEmojiAsReaction: "Roles that can not use this emoji as reaction"
 cancelReactionConfirm: "Really delete your reaction?"
 changeReactionConfirm: "Really change your reaction?"
 later: "Later"
