feat: パスキーに対応

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -413,6 +413,7 @@ token: "Token"
 2fa: "Two-factor authentication"
 totp: "Authenticator App"
 totpDescription: "Use an authenticator app to enter one-time passwords"
+useSecurityKey: "Please use the security key or passkey according to the browser or device instructions."
 moderator: "Moderator"
 moderation: "Moderation"
 nUsersMentioned: "Mentioned by {n} users"
@@ -1693,7 +1694,6 @@ _2fa:
   securityKeyNotSupported: "Your browser does not support security keys."
   registerTOTPBeforeKey: "Please set up an authenticator app to register a security or pass key."
   securityKeyInfo: "Besides fingerprint or PIN authentication, you can also setup authentication via hardware security keys that support FIDO2 to further secure your account."
-  chromePasskeyNotSupported: "Chrome passkeys are currently not supported."
   registerSecurityKey: "Register a security or pass key"
   securityKeyName: "Enter a key name"
   tapSecurityKey: "Please follow your browser to register the security or pass key"
