--- a/locales/ko-KR.yml
+++ b/locales/ko-KR.yml
@@ -412,6 +412,7 @@ token: "토큰"
 2fa: "2단계 인증"
 totp: "인증 앱"
 totpDescription: "인증 앱을 사용하여 일회성 비밀번호 입력"
+useSecurityKey: "브라우저 또는 장치의 안내에 따라 보안 키 또는 패스키를 사용해 주세요."
 moderator: "모더레이터"
 moderation: "모더레이션"
 nUsersMentioned: "{n}명이 언급함"
@@ -1685,7 +1686,6 @@ _2fa:
   securityKeyNotSupported: "이 브라우저는 보안 키를 지원하지 않습니다."
   registerTOTPBeforeKey: "보안 키 또는 패스키를 등록하려면 인증 앱을 등록하십시오."
   securityKeyInfo: "FIDO2를 지원하는 하드웨어 보안 키 혹은 디바이스의 지문인식이나 화면잠금 PIN을 이용해서 로그인하도록 설정할 수 있습니다."
-  chromePasskeyNotSupported: "현재 Chrome의 패스키는 지원되지 않습니다."
   registerSecurityKey: "보안 키 또는 패스키 등록"
   securityKeyName: "키 이름 입력"
   tapSecurityKey: "브라우저의 지시에 따라 보안 키 또는 패스키를 등록하여 주십시오"
